Fixed user sidebar in posts on mobile

--- a/less/topic.less
+++ b/less/topic.less
@@ -138,6 +138,22 @@
 			.post-user-sidebar {
 				margin-bottom: 0;
 				padding: 5px 10px;
+				
+				small {
+					text-align: left;
+				}
+			}
+			
+			@media (max-width: @screen-xs-max) {
+				.post-user-sidebar {
+					.icon {
+						margin-top: 0px;
+					}
+					
+					.panel-body.clearfix {
+						padding: 0;
+					}
+				}
 			}
 
 			@media (min-width: @screen-md-min) {
